; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_update_last_io_time.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_update_last_io_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._throttle_io_info_t = type { i32 }
%struct.TYPE_3__ = type { i64, i32, %struct._throttle_io_info_t* }

@_throttle_io_info = common dso_local global %struct._throttle_io_info_t* null, align 8
@LOWPRI_MAX_NUM_DEV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @update_last_io_time(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct._throttle_io_info_t*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = icmp eq %struct.TYPE_3__* %4, null
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** @_throttle_io_info, align 8
  %8 = load i32, i32* @LOWPRI_MAX_NUM_DEV, align 4
  %9 = sub nsw i32 %8, 1
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %7, i64 %10
  store %struct._throttle_io_info_t* %11, %struct._throttle_io_info_t** %3, align 8
  br label %28

12:                                               ; preds = %1
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 2
  %15 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %14, align 8
  %16 = icmp eq %struct._throttle_io_info_t* %15, null
  br i1 %16, label %17, label %23

17:                                               ; preds = %12
  %18 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** @_throttle_io_info, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %18, i64 %21
  store %struct._throttle_io_info_t* %22, %struct._throttle_io_info_t** %3, align 8
  br label %27

23:                                               ; preds = %12
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 2
  %26 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %25, align 8
  store %struct._throttle_io_info_t* %26, %struct._throttle_io_info_t** %3, align 8
  br label %27

27:                                               ; preds = %23, %17
  br label %28

28:                                               ; preds = %27, %6
  %29 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %30 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %29, i32 0, i32 0
  %31 = call i32 @microuptime(i32* %30)
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %33 = icmp ne %struct.TYPE_3__* %32, null
  br i1 %33, label %34, label %40

34:                                               ; preds = %28
  %35 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %36 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 1
  store i32 %37, i32* %39, align 8
  br label %40

40:                                               ; preds = %34, %28
  ret void
}

declare dso_local i32 @microuptime(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
